--- a/Assignment-5/makefile
+++ b/Assignment-5/makefile
@@ -1,6 +1,10 @@
 test: mysocket.c mysocket.h
-	gcc testserv.c mysocket.c -o ts
-	gcc testcli.c mysocket.c -o tc
+	gcc testserv.c mysocket.c -pthread -o ts
+	gcc testcli.c mysocket.c -pthread -o tc
+
+library: mysocket.c mysocket.h
+	gcc -c mysocket.c -pthread -o mysocket.o
+	ar rcs libmysocket.a mysocket.o
 
 clean:
-	rm -f ts tc
+	rm -f ts tc libmysocket.a *.o
