--- a/Assignment-5/Test-Folder/makefile
+++ b/Assignment-5/Test-Folder/makefile
@@ -1,9 +1,9 @@
 test: mysocket.c mysocket.h
-	gcc testserv.c mysocket.c -pthread -o ts
-	gcc testcli.c mysocket.c -pthread -o tc
+	gcc testserv.c ../mysocket.c -pthread -o ts
+	gcc testcli.c ../mysocket.c -pthread -o tc
 
 library: mysocket.c mysocket.h
-	gcc -c mysocket.c -pthread -o mysocket.o
+	gcc -c ../mysocket.c -pthread -o mysocket.o
 	ar rcs libmysocket.a mysocket.o
 
 clean:
