--- a/Assignment-5/makefile
+++ b/Assignment-5/makefile
@@ -1,10 +1,14 @@
+library: mysocket.c mysocket.h
+	gcc -c mysocket.c -pthread -o mysocket.o
+	ar rcs libmysocket.a mysocket.o
+
 test: mysocket.c mysocket.h
 	gcc testserv.c mysocket.c -pthread -o ts
 	gcc testcli.c mysocket.c -pthread -o tc
 
-library: mysocket.c mysocket.h
-	gcc -c mysocket.c -pthread -o mysocket.o
-	ar rcs libmysocket.a mysocket.o
+output: libmysocket.a
+	gcc testserv.c -L. -lmysocket -o ts
+	gcc testcli.c -L. -lmysocket -o tc
 
 clean:
 	rm -f ts tc libmysocket.a *.o
