--- a/Assignment-5/Test-Folder/makefile
+++ b/Assignment-5/Test-Folder/makefile
@@ -1,8 +1,8 @@
-test:
-	gcc testserv.c ../mysocket.c -pthread -o ts
-	gcc testcli.c ../mysocket.c -pthread -o tc
+test: libmysocket.a
+	gcc testserv.c -L. -lmysocket -o ts
+	gcc testcli.c -L. -lmysocket -o tc
 
-library:
+library: 
 	gcc -c ../mysocket.c -pthread -o mysocket.o
 	ar rcs libmysocket.a mysocket.o
 
