--- a/Assignment-5/Test-Folder/makefile
+++ b/Assignment-5/Test-Folder/makefile
@@ -1,10 +1,10 @@
-test: libmysocket.a
-	gcc testserv.c -L. -lmysocket -o ts
-	gcc testcli.c -L. -lmysocket -o tc
+test: libmsocket.a
+	gcc testserv.c -L. -lmsocket -o ts
+	gcc testcli.c -L. -lmsocket -o tc
 
 library: 
 	gcc -c ../mysocket.c -pthread -o mysocket.o
-	ar rcs libmysocket.a mysocket.o
+	ar rcs libmsocket.a mysocket.o
 
 clean:
-	rm -f ts tc libmysocket.a *.o
+	rm -f ts tc libmsocket.a *.o
