--- a/Assignment-5/makefile
+++ b/Assignment-5/makefile
@@ -1,6 +1,6 @@
 library: mysocket.c mysocket.h
 	gcc -c mysocket.c -pthread -o mysocket.o
-	ar rcs libmysocket.a mysocket.o
+	ar rcs libmsocket.a mysocket.o
 
 clean:
-	rm -f libmysocket.a *.o
+	rm -f libmsocket.a *.o
